--- a/projects.html
+++ b/projects.html
@@ -33,8 +33,6 @@
 				<div class="navbar-header pull-left">
 					<a href="index.html" class="navbar-brand">
 						<small>
-							<!-- <i class="fa fa-leaf"></i> -->
-              <!-- <img src="assets/images/logo.png" style="height:30px; width:70px;"> -->
 							 Revenue Sure
 						</small>
 					</a>
@@ -596,6 +594,7 @@
 							<h1>
 								Projects
 							</h1>
+
 						</div><!-- /.page-header -->
 
 						<div class="row">
@@ -703,19 +702,7 @@
 														<div class="table-detail">
 															<div class="row">
 																 <div class="col-xs-12 col-sm-2">
-																	<!--<div class="text-center">
-																		<img height="150" class="thumbnail inline no-margin-bottom" alt="Domain Owner's Avatar" src="assets/images/avatars/profile-pic.jpg" />
-																		<br />
-																		<div class="width-80 label label-info label-xlg arrowed-in arrowed-in-right">
-																			<div class="inline position-relative">
-																				<a class="user-title-label" href="#">
-																					<i class="ace-icon fa fa-circle light-green"></i>
-																					&nbsp;
-																					<span class="white">Alex M. Doe</span>
-																				</a>
-																			</div>
-																		</div>
-																	</div>-->
+
 																</div>
 
 																<div class="col-xs-12 col-sm-7">
@@ -1028,17 +1015,6 @@
 															<div class="row">
 																<div class="col-xs-12 col-sm-2">
 																	<div class="text-center">
-																		<img height="150" class="thumbnail inline no-margin-bottom" alt="Domain Owner's Avatar" src="assets/images/avatars/profile-pic.jpg" />
-																		<br />
-																		<div class="width-80 label label-info label-xlg arrowed-in arrowed-in-right">
-																			<div class="inline position-relative">
-																				<a class="user-title-label" href="#">
-																					<i class="ace-icon fa fa-circle light-green"></i>
-																					&nbsp;
-																					<span class="white">Alex M. Doe</span>
-																				</a>
-																			</div>
-																		</div>
 																	</div>
 																</div>
 
@@ -1047,59 +1023,44 @@
 
 																	<div class="profile-user-info profile-user-info-striped">
 																		<div class="profile-info-row">
-																			<div class="profile-info-name"> Username </div>
+																			<div class="profile-info-name">Sirere Road(10km)</div>
 
 																			<div class="profile-info-value">
-																				<span>alexdoe</span>
+																				<span>Allocated Ksh.50M,5% complete.<br>Construction by China Constructors.</span>
 																			</div>
 																		</div>
 
 																		<div class="profile-info-row">
-																			<div class="profile-info-name"> Location </div>
+																			<div class="profile-info-name">Rongai Road(30km) </div>
 
 																			<div class="profile-info-value">
 																				<i class="fa fa-map-marker light-orange bigger-110"></i>
-																				<span>Netherlands, Amsterdam</span>
+																				<span>Allocated Ksh.60M ,2% complete<br>Construction by China Constructors.</span>
 																			</div>
 																		</div>
 
 																		<div class="profile-info-row">
-																			<div class="profile-info-name"> Age </div>
+																			<div class="profile-info-name"> Sikwa Road(20km) </div>
 
 																			<div class="profile-info-value">
-																				<span>38</span>
+																				<span>Allocated 150M ,1% complete<br>Construction by China Constructors.</span>
 																			</div>
 																		</div>
 
 																		<div class="profile-info-row">
-																			<div class="profile-info-name"> Joined </div>
+																			<div class="profile-info-name"> Initial date </div>
 
 																			<div class="profile-info-value">
-																				<span>2010/06/20</span>
+																				<span>2017/05/20</span>
 																			</div>
 																		</div>
 
-																		<div class="profile-info-row">
-																			<div class="profile-info-name"> Last Online </div>
-
-																			<div class="profile-info-value">
-																				<span>3 hours ago</span>
-																			</div>
-																		</div>
-
-																		<div class="profile-info-row">
-																			<div class="profile-info-name"> About Me </div>
-
-																			<div class="profile-info-value">
-																				<span>Bio</span>
-																			</div>
-																		</div>
 																	</div>
 																</div>
 
 																<div class="col-xs-12 col-sm-3">
 																	<div class="space visible-xs"></div>
-																	<h4 class="header blue lighter less-margin">Send a feedback to Admin</h4>
+																	<h4 class="header blue lighter less-margin">Send a feedback on the projects</h4>
 
 																	<div class="space-6"></div>
 
@@ -1209,17 +1170,6 @@
 															<div class="row">
 																<div class="col-xs-12 col-sm-2">
 																	<div class="text-center">
-																		<img height="150" class="thumbnail inline no-margin-bottom" alt="Domain Owner's Avatar" src="assets/images/avatars/profile-pic.jpg" />
-																		<br />
-																		<div class="width-80 label label-info label-xlg arrowed-in arrowed-in-right">
-																			<div class="inline position-relative">
-																				<a class="user-title-label" href="#">
-																					<i class="ace-icon fa fa-circle light-green"></i>
-																					&nbsp;
-																					<span class="white">Alex M. Doe</span>
-																				</a>
-																			</div>
-																		</div>
 																	</div>
 																</div>
 
@@ -1228,59 +1178,44 @@
 
 																	<div class="profile-user-info profile-user-info-striped">
 																		<div class="profile-info-row">
-																			<div class="profile-info-name"> Username </div>
+																			<div class="profile-info-name">Sirere Road(10km)</div>
 
 																			<div class="profile-info-value">
-																				<span>alexdoe</span>
+																				<span>Allocated Ksh.50M,5% complete.<br>Construction by China Constructors.</span>
 																			</div>
 																		</div>
 
 																		<div class="profile-info-row">
-																			<div class="profile-info-name"> Location </div>
+																			<div class="profile-info-name">Rongai Road(30km) </div>
 
 																			<div class="profile-info-value">
 																				<i class="fa fa-map-marker light-orange bigger-110"></i>
-																				<span>Netherlands, Amsterdam</span>
+																				<span>Allocated Ksh.60M ,2% complete<br>Construction by China Constructors.</span>
 																			</div>
 																		</div>
 
 																		<div class="profile-info-row">
-																			<div class="profile-info-name"> Age </div>
+																			<div class="profile-info-name"> Sikwa Road(20km) </div>
 
 																			<div class="profile-info-value">
-																				<span>38</span>
+																				<span>Allocated 150M ,1% complete<br>Construction by China Constructors.</span>
 																			</div>
 																		</div>
 
 																		<div class="profile-info-row">
-																			<div class="profile-info-name"> Joined </div>
+																			<div class="profile-info-name"> Initial date </div>
 
 																			<div class="profile-info-value">
-																				<span>2010/06/20</span>
+																				<span>2017/05/20</span>
 																			</div>
 																		</div>
 
-																		<div class="profile-info-row">
-																			<div class="profile-info-name"> Last Online </div>
-
-																			<div class="profile-info-value">
-																				<span>3 hours ago</span>
-																			</div>
-																		</div>
-
-																		<div class="profile-info-row">
-																			<div class="profile-info-name"> About Me </div>
-
-																			<div class="profile-info-value">
-																				<span>Bio</span>
-																			</div>
-																		</div>
 																	</div>
 																</div>
 
 																<div class="col-xs-12 col-sm-3">
 																	<div class="space visible-xs"></div>
-																	<h4 class="header blue lighter less-margin">Send a feedback to Admin</h4>
+																	<h4 class="header blue lighter less-margin">Send a feedback on the projects</h4>
 
 																	<div class="space-6"></div>
 
@@ -1389,17 +1324,6 @@
 															<div class="row">
 																<div class="col-xs-12 col-sm-2">
 																	<div class="text-center">
-																		<img height="150" class="thumbnail inline no-margin-bottom" alt="Domain Owner's Avatar" src="assets/images/avatars/profile-pic.jpg" />
-																		<br />
-																		<div class="width-80 label label-info label-xlg arrowed-in arrowed-in-right">
-																			<div class="inline position-relative">
-																				<a class="user-title-label" href="#">
-																					<i class="ace-icon fa fa-circle light-green"></i>
-																					&nbsp;
-																					<span class="white">Alex M. Doe</span>
-																				</a>
-																			</div>
-																		</div>
 																	</div>
 																</div>
 
@@ -1408,59 +1332,44 @@
 
 																	<div class="profile-user-info profile-user-info-striped">
 																		<div class="profile-info-row">
-																			<div class="profile-info-name"> Username </div>
+																			<div class="profile-info-name">Sirere Road(10km)</div>
 
 																			<div class="profile-info-value">
-																				<span>alexdoe</span>
+																				<span>Allocated Ksh.50M,5% complete.<br>Construction by China Constructors.</span>
 																			</div>
 																		</div>
 
 																		<div class="profile-info-row">
-																			<div class="profile-info-name"> Location </div>
+																			<div class="profile-info-name">Rongai Road(30km) </div>
 
 																			<div class="profile-info-value">
 																				<i class="fa fa-map-marker light-orange bigger-110"></i>
-																				<span>Netherlands, Amsterdam</span>
+																				<span>Allocated Ksh.60M ,2% complete<br>Construction by China Constructors.</span>
 																			</div>
 																		</div>
 
 																		<div class="profile-info-row">
-																			<div class="profile-info-name"> Age </div>
+																			<div class="profile-info-name"> Sikwa Road(20km) </div>
 
 																			<div class="profile-info-value">
-																				<span>38</span>
+																				<span>Allocated 150M ,1% complete<br>Construction by China Constructors.</span>
 																			</div>
 																		</div>
 
 																		<div class="profile-info-row">
-																			<div class="profile-info-name"> Joined </div>
+																			<div class="profile-info-name"> Initial date </div>
 
 																			<div class="profile-info-value">
-																				<span>2010/06/20</span>
+																				<span>2017/05/20</span>
 																			</div>
 																		</div>
 
-																		<div class="profile-info-row">
-																			<div class="profile-info-name"> Last Online </div>
-
-																			<div class="profile-info-value">
-																				<span>3 hours ago</span>
-																			</div>
-																		</div>
-
-																		<div class="profile-info-row">
-																			<div class="profile-info-name"> About Me </div>
-
-																			<div class="profile-info-value">
-																				<span>Bio</span>
-																			</div>
-																		</div>
 																	</div>
 																</div>
 
 																<div class="col-xs-12 col-sm-3">
 																	<div class="space visible-xs"></div>
-																	<h4 class="header blue lighter less-margin">Send a feedback to Admin</h4>
+																	<h4 class="header blue lighter less-margin">Send a feedback on the projects</h4>
 
 																	<div class="space-6"></div>
 
