--- a/revenue.html
+++ b/revenue.html
@@ -16,6 +16,8 @@
 
                                 <div class="col-6 p-4">
 
+                                  <div class="widget7-supporting-charts" class="row">col-span</div>
+
                                     <div id="widget5-created-chart">
                                         <div class="h6 text-muted">CREATED</div>
                                         <div class="h2 count">48</div>
